# sd_method_lessons

./: .gitignore  README.md  pyproject.toml  sd_method_lessons.code-workspace
lessons/: likert_1.py  likert_2.py  likert_3.py  sd_1.py  sd_2.py  sd_3.py  sd_3g.py  sd_4.py  sd_4g.py  sd_5.py  sd_6.py  sd_6g.py  sd_7.py  sd_8.py  sd_8g.py  sd_9.py  sd_utils.py
sample_data/: sample_1.csv  sample_sd.csv
src/: app_sd.py  sd_plot.py  sd_utils.py  tooltip.py
