[project]
name = "sd-method-lessons"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=3.0.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.17.0",
]

[tool.uv]
exclude-newer = "30 days"

[tool.ruff]
line-length = 120
